#2212 Formatting and documentation improvements